Made navbar dynamic

--- a/index.html
+++ b/index.html
@@ -62,7 +62,20 @@
         </li>
       </ul>
     </nav>
-    <main></main>
+    <main>
+        <section id="home" class="show">
+            <h2 class="section-title">Welcome...</h2>
+        </section>
+        <section id="idea">
+            <h2 class="section-title">What is The Idea?</h2>
+        </section>
+        <section id="contribute">
+            <h2 class="section-title">How do I contribute?</h2>
+        </section>
+        <section id="info">
+            <h2 class="section-title">More about us</h2>
+        </section>
+    </main>
     <!-- scripts -->
     <script src="./scripts/javascript/script.js"></script>
   </body>
