--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Idea</title>
+    <!-- Google Fonts CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&family=Ubuntu:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font awesome CDN -->
     <link
       rel="stylesheet"
@@ -13,8 +20,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-<!-- Local Stylesheet -->
-<link rel="stylesheet" href="./styles/css/style.css">
+    <!-- Local Stylesheet -->
+    <link rel="stylesheet" href="./styles/css/style.css" />
   </head>
 
   <body>
@@ -63,18 +70,48 @@
       </ul>
     </nav>
     <main>
-        <section id="home" class="show">
-            <h2 class="section-title">Welcome...</h2>
-        </section>
-        <section id="idea">
-            <h2 class="section-title">What is The Idea?</h2>
-        </section>
-        <section id="contribute">
-            <h2 class="section-title">How do I contribute?</h2>
-        </section>
-        <section id="info">
-            <h2 class="section-title">More about us</h2>
-        </section>
+      <section id="home" class="show">
+        <h2 class="section-heading">Welcome...</h2>
+        <article class="home-content">
+            <div class="home-qna">
+                <p class="qna">
+                    <i style="text-decoration: underline; margin-right: 0.5rem;">Q:</i>
+                    <span class="q">Where is the Idea?</span>
+                    <br>
+                    <i style="text-decoration: underline; margin-right: 0.5rem;">Ans:</i>
+                    <span class="ans">Just slap the "The Idea" tab</span>
+                </p>
+                <p class="qna">
+                    <i style="text-decoration: underline; margin-right: 0.5rem;">Q:</i>
+                    <span class="q">I want to contribute. How do I ?</span>
+                    <br>
+                    <i style="text-decoration: underline; margin-right: 0.5rem;">Ans:</i>
+                    <span class="ans">
+                        Just head over to the "Contribute" section and you will know how.
+                    </span>
+                </p>
+                <p class="qna">
+                    <i style="text-decoration: underline; margin-right: 0.5rem;">Q:</i>
+                    <span class="q">I want to know more.</span>
+                    <br>
+                    <i style="text-decoration: underline; margin-right: 0.5rem;">Ans:</i>
+                    <span class="ans">Go to the information section</span>
+                </p>
+            </div>
+            <div class="home-image">
+                <img src="./res/images/idea.svg" alt="">
+            </div>
+        </article>
+      </section>
+      <section id="idea" class="hide">
+        <h2 class="section-heading">What is The Idea?</h2>
+      </section>
+      <section id="contribute" class="hide">
+        <h2 class="section-heading">How do I contribute?</h2>
+      </section>
+      <section id="info" class="hide">
+        <h2 class="section-heading">More about us</h2>
+      </section>
     </main>
     <!-- scripts -->
     <script src="./scripts/javascript/script.js"></script>
