Added 'Idea' section

--- a/index.html
+++ b/index.html
@@ -73,38 +73,79 @@
       <section id="home" class="show">
         <h2 class="section-heading">Welcome...</h2>
         <article class="home-content">
-            <div class="home-qna">
-                <p class="qna">
-                    <i style="text-decoration: underline; margin-right: 0.5rem;">Q:</i>
-                    <span class="q">Where is the Idea?</span>
-                    <br>
-                    <i style="text-decoration: underline; margin-right: 0.5rem;">Ans:</i>
-                    <span class="ans">Just slap the "The Idea" tab</span>
-                </p>
-                <p class="qna">
-                    <i style="text-decoration: underline; margin-right: 0.5rem;">Q:</i>
-                    <span class="q">I want to contribute. How do I ?</span>
-                    <br>
-                    <i style="text-decoration: underline; margin-right: 0.5rem;">Ans:</i>
-                    <span class="ans">
-                        Just head over to the "Contribute" section and you will know how.
-                    </span>
-                </p>
-                <p class="qna">
-                    <i style="text-decoration: underline; margin-right: 0.5rem;">Q:</i>
-                    <span class="q">I want to know more.</span>
-                    <br>
-                    <i style="text-decoration: underline; margin-right: 0.5rem;">Ans:</i>
-                    <span class="ans">Go to the information section</span>
-                </p>
-            </div>
-            <div class="home-image">
-                <img src="./res/images/idea.svg" alt="">
-            </div>
+          <div class="home-qna">
+            <p class="qna">
+              <i style="text-decoration: underline; margin-right: 0.5rem">Q:</i>
+              <span class="q">Where is the Idea?</span>
+              <br />
+              <i style="text-decoration: underline; margin-right: 0.5rem"
+                >Ans:</i
+              >
+              <span class="ans">Just slap the "The Idea" tab.</span>
+            </p>
+            <p class="qna">
+              <i style="text-decoration: underline; margin-right: 0.5rem">Q:</i>
+              <span class="q">I want to contribute. How do I ?</span>
+              <br />
+              <i style="text-decoration: underline; margin-right: 0.5rem"
+                >Ans:</i
+              >
+              <span class="ans">
+                Just head over to the "Contribute" section and you will know
+                how.
+              </span>
+            </p>
+            <p class="qna">
+              <i style="text-decoration: underline; margin-right: 0.5rem">Q:</i>
+              <span class="q">I want to know more.</span>
+              <br />
+              <i style="text-decoration: underline; margin-right: 0.5rem"
+                >Ans:</i
+              >
+              <span class="ans">Go to the information section</span>
+            </p>
+          </div>
+          <div class="home-image">
+            <img src="./res/images/idea.svg" alt="" />
+          </div>
         </article>
       </section>
       <section id="idea" class="hide">
         <h2 class="section-heading">What is The Idea?</h2>
+        <article class="idea-content">
+          <div class="idea-details">
+            <h2 class="idea-title">Make a website for our own</h2>
+            <br />
+            <p class="idea-desc-tile">It will have:</p>
+            <ul class="idea-desc-list">
+              <li class="idea-desc-container">
+                <i class="fas fa-check check-mark"></i>
+                <p class="idea-desc">Team login system</p>
+              </li>
+              <li class="idea-desc-container">
+                <i class="fas fa-check check-mark"></i>
+                <p class="idea-desc">Search for an user system</p>
+              </li>
+              <li class="idea-desc-container">
+                <i class="fas fa-check check-mark"></i>
+                <p class="idea-desc">
+                  Lists of team members ( Profile Card). Just like "Our Team"
+                  section in a typical website.
+                </p>
+              </li>
+              <li class="idea-desc-container">
+                <i class="fas fa-check check-mark"></i>
+                <p class="idea-desc">
+                  Different sections for different kind of developers. Like "All
+                  Members", "Frontend Developers" section.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="idea-image">
+            <img src="./res/images/sharing_idea.svg" alt="" />
+          </div>
+        </article>
       </section>
       <section id="contribute" class="hide">
         <h2 class="section-heading">How do I contribute?</h2>
