Contribute section added

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h2 class="section-heading">What is The Idea?</h2>
         <article class="idea-content">
           <div class="idea-details">
-            <h2 class="idea-title">Make a website for our own</h2>
+            <h2 class="article-title">Make a website for our own</h2>
             <br />
             <p class="idea-desc-tile">It will have:</p>
             <ul class="idea-desc-list">
@@ -124,13 +124,13 @@
               </li>
               <li class="idea-desc-container">
                 <i class="fas fa-check check-mark"></i>
-                <p class="idea-desc">Search for an user system</p>
+                <p class="idea-desc">"Search for an user" system</p>
               </li>
               <li class="idea-desc-container">
                 <i class="fas fa-check check-mark"></i>
                 <p class="idea-desc">
                   Lists of team members ( Profile Card). Just like "Our Team"
-                  section in a typical website.
+                  page in a typical website.
                 </p>
               </li>
               <li class="idea-desc-container">
@@ -149,6 +149,25 @@
       </section>
       <section id="contribute" class="hide">
         <h2 class="section-heading">How do I contribute?</h2>
+        <article class="contribute-content">
+          <div class="contribute-details">
+            <h2 class="article-title">So, you want to contribute...</h2>
+            <br />
+            <div class="contribute-desc">
+              <p>
+            Well, if you got skill or even if you don't, you can contribute to our
+            project. Just click the <strong>Button</strong> below and you will
+            be redirected to a Facebook Group. Post there your interest and wait
+            for our decision in the comment section.
+              </p>
+              <br>
+              <a href="https://www.facebook.com/groups/1615501782173756/" target="_blank" class="contribute-btn">Contribute</a>
+            </div>
+          </div>
+          <div class="contribute-section">
+            <img src="./res/images/share_your_idea.svg" alt="">
+          </div>
+        </article>
       </section>
       <section id="info" class="hide">
         <h2 class="section-heading">More about us</h2>
