Added info section

--- a/index.html
+++ b/index.html
@@ -155,22 +155,42 @@
             <br />
             <div class="contribute-desc">
               <p>
-            Well, if you got skill or even if you don't, you can contribute to our
-            project. Just click the <strong>Button</strong> below and you will
-            be redirected to a Facebook Group. Post there your interest and wait
-            for our decision in the comment section.
+                Well, if you got skill or even if you don't, you can contribute
+                to our project. Just click the <strong>Button</strong> below and
+                you will be redirected to a Facebook Group. Post there your
+                interest and wait for our decision in the comment section.
               </p>
-              <br>
-              <a href="https://www.facebook.com/groups/1615501782173756/" target="_blank" class="contribute-btn">Contribute</a>
+              <br />
+              <a
+                href="https://www.facebook.com/groups/1615501782173756/"
+                target="_blank"
+                class="contribute-btn"
+                >Contribute</a
+              >
             </div>
           </div>
           <div class="contribute-section">
-            <img src="./res/images/share_your_idea.svg" alt="">
+            <img src="./res/images/share_your_idea.svg" alt="" />
           </div>
         </article>
       </section>
       <section id="info" class="hide">
         <h2 class="section-heading">More about us</h2>
+        <article class="info-content">
+          <div class="info-details">
+            <h2 class="info-title">Hey there...</h2>
+            <div class="info-desc">
+              <p>
+                We want to develop some open source projects. It is one of the
+                project we will be working on. If you are interested, you can
+                contribute to our project. You can check "Contribute" section for more details. 
+              </p>
+            </div>
+          </div>
+          <div class="info-img">
+            <img src="./res/images/info.svg" alt="" />
+          </div>
+        </article>
       </section>
     </main>
     <!-- scripts -->
