Change file structure, increase font size

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&family=Ubuntu:wght@300;500&display=swap"
       rel="stylesheet"
     />
+<!-- 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;600&display=swap"
+      rel="stylesheet"
+    /> -->
     <!-- Font awesome CDN -->
     <link
       rel="stylesheet"
@@ -21,7 +26,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- Local Stylesheet -->
-    <link rel="stylesheet" href="./styles/css/style.css" />
+    <link rel="stylesheet" href="./public/css/style.css" />
   </head>
 
   <body>
@@ -75,20 +80,20 @@
         <article class="home-content">
           <div class="home-qna">
             <p class="qna">
-              <i style="text-decoration: underline; margin-right: 0.5rem">Q:</i>
+              <i style="text-decoration: underline; margin-right: 0.5rem">q:</i>
               <span class="q">Where is the Idea?</span>
               <br />
               <i style="text-decoration: underline; margin-right: 0.5rem"
-                >Ans:</i
+                >A:</i
               >
               <span class="ans">Just slap the "The Idea" tab.</span>
             </p>
             <p class="qna">
-              <i style="text-decoration: underline; margin-right: 0.5rem">Q:</i>
+              <i style="text-decoration: underline; margin-right: 0.5rem">q:</i>
               <span class="q">I want to contribute. How do I ?</span>
               <br />
               <i style="text-decoration: underline; margin-right: 0.5rem"
-                >Ans:</i
+                >A:</i
               >
               <span class="ans">
                 Just head over to the "Contribute" section and you will know
@@ -96,17 +101,17 @@
               </span>
             </p>
             <p class="qna">
-              <i style="text-decoration: underline; margin-right: 0.5rem">Q:</i>
+              <i style="text-decoration: underline; margin-right: 0.5rem">q:</i>
               <span class="q">I want to know more.</span>
               <br />
               <i style="text-decoration: underline; margin-right: 0.5rem"
-                >Ans:</i
+                >A:</i
               >
               <span class="ans">Go to the information section</span>
             </p>
           </div>
           <div class="home-image">
-            <img src="./res/images/idea.svg" alt="" />
+            <img src="./public/images/idea.svg" alt="" />
           </div>
         </article>
       </section>
@@ -143,7 +148,7 @@
             </ul>
           </div>
           <div class="idea-image">
-            <img src="./res/images/sharing_idea.svg" alt="" />
+            <img src="./public/images/sharing_idea.svg" alt="" />
           </div>
         </article>
       </section>
@@ -170,7 +175,7 @@
             </div>
           </div>
           <div class="contribute-section">
-            <img src="./res/images/share_your_idea.svg" alt="" />
+            <img src="./public/images/share_your_idea.svg" alt="" />
           </div>
         </article>
       </section>
@@ -183,17 +188,18 @@
               <p>
                 We want to develop some open source projects. It is one of the
                 project we will be working on. If you are interested, you can
-                contribute to our project. You can check "Contribute" section for more details. 
+                contribute to our project. You can check "Contribute" section
+                for more details.
               </p>
             </div>
           </div>
           <div class="info-img">
-            <img src="./res/images/info.svg" alt="" />
+            <img src="./public/images/info.svg" alt="" />
           </div>
         </article>
       </section>
     </main>
     <!-- scripts -->
-    <script src="./scripts/javascript/script.js"></script>
+    <script src="./public/js/script.js"></script>
   </body>
 </html>
